force-app/main/default/objects/Visitor_Intent_Threshold_Crossed__e/Visitor_Intent_Threshold_Crossed__e.object-meta.xml
<CustomObject>
    <label>Visitor Intent Threshold Crossed</label>
    <pluralLabel>Visitor Intent Threshold Crossed</pluralLabel>
</CustomObject>