force-app/main/default/objects/Visitor_Intent_Threshold_Crossed__e/fields/Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>Intent_Score__c</fullName>
    <label>Intent Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>