force-app/main/default/objects/Visitor_Intent_Threshold_Crossed__e/fields/Preferred_Model__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Model__c</fullName>
    <label>Preferred Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>