force-app/main/default/objects/Visitor_Intent_Threshold_Crossed__e/fields/Trigger_Reason__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Reason__c</fullName>
    <label>Trigger Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>