force-app/main/default/objects/Visitor_Intent_Threshold_Crossed__e/fields/Visitor_Id__c.field-meta.xml
<CustomField>
    <fullName>Visitor_Id__c</fullName>
    <label>Visitor ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>